--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,10 @@
-#headerouter{
-  width:100%;
-  position:fixed;
-  top:10px;
+#headerouter {
+  width: 100%;
+  position: fixed;
+  top: 10px;
 }
 
-#loadingsmall{
-  font-family: 'Exo', sans-serif;
-color: #58b1cc;
-margin-left: 13px;
-}
-
-#by{
+#by {
   top: 10px;
   height: 25px;
   width: 100px;
@@ -20,18 +14,25 @@ margin-left: 13px;
   margin-left: auto;
   margin-right: auto;
   opacity: 0.9;
-
 }
 
-A:link {text-decoration: none;
-color:#58b1cc;
+A:link {
+  text-decoration: none;
+  color: #58b1cc;
 }
-A:visited {text-decoration: none;
-color:#58b1cc;}
-A:active {text-decoration: none}
-A:hover {text-decoration: underline; color:#58b1cc;}
+A:visited {
+  text-decoration: none;
+  color: #58b1cc;
+}
+A:active {
+  text-decoration: none;
+}
+A:hover {
+  text-decoration: underline;
+  color: #58b1cc;
+}
 
-#headerinner{
+#headerinner {
   top: 10px;
   height: 42px;
   width: 1100px;
@@ -43,56 +44,53 @@ A:hover {text-decoration: underline; color:#58b1cc;}
   opacity: 0.9;
 }
 
-#loading{
+#loading {
   top: 50%;
-left: 50%;
-height: 150px;
-width: 300px;
-background: #666666;
--moz-border-radius: 35px;
-border-radius: 9px;
-
-opacity: 0.9;
-position: fixed;
-margin-left: -150px;
-margin-top: -75px;
+  left: 50%;
+  width: 300px;
+  padding: 15px;
+  background: #666666;
+  -moz-border-radius: 35px;
+  border-radius: 9px;
+  opacity: 0.9;
+  position: fixed;
+  margin-left: -150px;
+  margin-top: -75px;
 }
 
-#headerleft{
-font-family: 'Exo', sans-serif;
-color: #58b1cc;
-font-weight: bold;
-padding-top: 4px;
-margin-left: 9px;
-font-size: 26px;
-text-shadow: 2px 2px 5px #3A3A3A;
-display: inline-block;
-position: relative;
-top: -13px;
-
+#headerleft {
+  font-family: 'Exo', sans-serif;
+  color: #58b1cc;
+  font-weight: bold;
+  padding-top: 4px;
+  margin-left: 9px;
+  font-size: 26px;
+  text-shadow: 2px 2px 5px #3A3A3A;
+  display: inline-block;
+  position: relative;
+  top: -13px;
 }
 
-#headersvg{
- position: relative;
-top: -1px;
-left: 3px;
-display: inline-block;
+#headersvg {
+  position: relative;
+  top: -1px;
+  left: 3px;
+  display: inline-block;
 }
 
-.headertext{
- font-family:'Exo', sans-serif;
- font-size:13px;
- fill:#ffffff;
- text-anchor:left;
-
+.headertext {
+  font-family: 'Exo', sans-serif;
+  font-size: 13px;
+  fill: #ffffff;
+  text-anchor: left;
 }
 
-.legendIcon{
+.legendIcon {
   margin-left: 10px;
 }
 
-#legend{
-  position:fixed;
+#legend {
+  position: fixed;
   bottom: 10px;
   height: 100px;
   width: 1100px;
@@ -102,126 +100,116 @@ display: inline-block;
   margin-left: auto;
   margin-right: auto;
   opacity: 0.9;
-  font-family:'Exo', sans-serif;
-  color:#ffffff;
+  font-family: 'Exo', sans-serif;
+  color: #ffffff;
 }
-#about{
+
+#about {
   cursor: pointer;
   display: inline;
-position: relative;
-font-family: 'Exo', sans-serif;
-color: #58b1cc;
-text-shadow: 2px 2px 5px #3A3A3A;
-font-size: 21px;
-font-weight: bold;
-left: -18px;
-top: -14px;
-}
-
-#about:hover{
-  color :#ffffff;
-}
-
-#aboutbox{
-top: 50%;
-left: 50%;
-height: 300px;
-width: 600px;
-background: #666666;
--moz-border-radius: 35px;
-border-radius: 9px;
-
-
-position: fixed;
-margin-left: -320px;
-margin-top: -170px;
-padding:20px;
-font-family: 'Exo', sans-serif;
-
-}
-
-
-.closex{
-  cursor: pointer;
-color:white;
-font-size:20px;
-font-weight:bold;
-}
-.abouttitle{
-  font-size:25px;
-font-weight:bold;
-color:#58b1cc;
-text-shadow: 2px 2px 5px #3A3A3A;
-
-}
-.abouttext{
-color:white;
-font-size:16px;
-}
-
-#lname{
+  position: relative;
+  font-family: 'Exo', sans-serif;
+  color: #58b1cc;
   text-shadow: 2px 2px 5px #3A3A3A;
-color: #58b1cc;
-font-size: 24px;
-margin-top: 5px;
-margin-left: 7px;
-}
-.miniBlue{
-color: #58b1cc;
-font-weight: bold;
-text-shadow: 2px 2px 5px #3A3A3A;
-
+  font-size: 21px;
+  font-weight: bold;
+  left: -18px;
+  top: -14px;
 }
 
-#tweet{
- position: relative;
-left: -14px;
-top: -10px;
-display: inline-block;
+#about:hover {
+  color: #ffffff;
 }
 
-.fb-like{
-
-top: -10px;
-left: -39px;
-
+#aboutbox {
+  top: 50%;
+  left: 50%;
+  height: 300px;
+  width: 600px;
+  background: #666666;
+  -moz-border-radius: 35px;
+  border-radius: 9px;
+  position: fixed;
+  margin-left: -320px;
+  margin-top: -170px;
+  padding: 20px;
+  font-family: 'Exo', sans-serif;
 }
 
-#loadingText{
-font-family: 'Exo', sans-serif;
-color: #58b1cc;
-font-size: 67px;
-font-weight: bold;
-margin-left: 5px;
-margin-left: 9px;
-margin-top: 7px;
+.closex {
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-#ldescription{
-color: #FFFFFF;
-font-size: 15px;
-margin-left: 8px;
-height:40px;
+.abouttitle {
+  font-size: 25px;
+  font-weight: bold;
+  color: #58b1cc;
+  text-shadow: 2px 2px 5px #3A3A3A;
 }
 
-#lowner, #lattribution, #lcreated, #lupdated{
-   float:left;
-   font-size:13px;
-   margin-left:8px;
+.abouttext {
+  color: white;
+  font-size: 16px;
 }
 
+#lname {
+  text-shadow: 2px 2px 5px #3A3A3A;
+  color: #58b1cc;
+  font-size: 24px;
+  margin-top: 5px;
+  margin-left: 7px;
+}
 
+.miniBlue {
+  color: #58b1cc;
+  font-weight: bold;
+  text-shadow: 2px 2px 5px #3A3A3A;
+}
 
-#chart{
-  width:1100px;
+#tweet {
+  position: relative;
+  left: -14px;
+  top: -10px;
+  display: inline-block;
+}
+
+.fb-like {
+  top: -10px;
+  left: -39px;
+}
+
+#loadingText {
+  font-family: 'Exo', sans-serif;
+  color: #58b1cc;
+  font-size: 67px;
+  font-weight: bold;
+}
+
+#ldescription {
+  color: #FFFFFF;
+  font-size: 15px;
+  margin-left: 8px;
+  height: 40px;
+}
+
+#lowner, #lattribution, #lcreated, #lupdated {
+  float: left;
+  font-size: 13px;
+  margin-left: 8px;
+}
+
+#chart {
+  width: 1100px;
   margin: 0 auto;
-
 }
 
-body{
-  width:100%;
-  background:#2E2E2E;
-  margin:0px;
+body {
+  width: 100%;
+  background: #2E2E2E;
+  margin: 0px;
 }
 
 circle {
@@ -231,25 +219,23 @@ circle {
 }
 
 circle.node {
- fill: rgba(24, 24, 24, 0.68);
-
+  fill: rgba(24, 24, 24, 0.68);
 }
 
 circle.view {
- fill: rgba(21, 180, 255, 0.68);
- stroke: rgba(0, 0, 0, 0.78);
+  fill: rgba(21, 180, 255, 0.68);
+  stroke: rgba(0, 0, 0, 0.78);
 }
 
-circle.highlight{
+circle.highlight {
   stroke: #ffffff;
-  
 }
 
-circle.maincircle{
-  stroke-width:5px;
+circle.maincircle {
+  stroke-width: 5px;
 }
 
-.nodeimg{
+.nodeimg {
   cursor: pointer;
 }
 
@@ -259,18 +245,28 @@ line.link {
   stroke-width: .25px;
 }
 
-.centertextbold{
- font-family:'Exo', sans-serif;
- font-size:26px;
- fill:#58b1cc;
- text-anchor:middle;
- font-weight: bold;
+.centertextbold {
+  font-family: 'Exo', sans-serif;
+  font-size: 26px;
+  fill: #58b1cc;
+  text-anchor: middle;
+  font-weight: bold;
 }
 
-.centertext{
- font-family:'Exo', sans-serif;
- font-size:26px;
- fill:#58b1cc;
- text-anchor:middle;
-
+.centertext {
+  font-family: 'Exo', sans-serif;
+  font-size: 26px;
+  fill: #58b1cc;
+  text-anchor: middle;
 }
+
+.agency-acronym {
+  font-family: 'Exo', sans-serif;
+  fill: #58b1cc;
+  font-size: 12px;
+}
+
+.node text, .nodeimg {
+  pointer-events: none;
+}
+
